Update "getFileExtension(byte[])" and "getFileExtension(com.j256.simplemagic.ContentInfo)" methods in "org.springframework.context.support.AivisSpeechRestApiJPanel" class Use "java.net.URI.URI(java.lang.String)" constructor to replace usage of "java.net.URL.URL(java.lang.String)" constructor